[gd_scene load_steps=5 format=3 uid="uid://cjm6e77hhavty"]

[ext_resource type="Script" path="res://scenes/levels/level_3/boss.gd" id="2_0l36i"]
[ext_resource type="Texture2D" uid="uid://b8jkcclwvtnwv" path="res://assets/FuckedUpPuffel.png" id="2_yqcr3"]
[ext_resource type="PackedScene" uid="uid://bhbcge80lfgy1" path="res://scenes/levels/level_3/boss_healthbar.tscn" id="3_jqmxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1h0s"]
size = Vector2(113, 116)

[node name="Boss" type="Node2D"]
script = ExtResource("2_0l36i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -1.90735e-06)
scale = Vector2(3.35294, 3.86667)
texture = ExtResource("2_yqcr3")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(0.298246, 4.9328e-07)
scale = Vector2(0.298246, 0.258621)
collision_layer = 4
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_v1h0s")

[node name="BossHealthbar" parent="." instance=ExtResource("3_jqmxa")]
offset_left = -100.0
offset_top = -94.0
offset_right = 300.0
offset_bottom = -44.0
scale = Vector2(0.5, 0.5)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(-1000, 0)
collision_mask = 2

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.75

[node name="AttackStartup" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackStartup" to="." method="_on_attack_startup_timeout"]
